# django-generic-api-permissions

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: pypi.yml  release.yml  tests.yml
generic_permissions/: apps.py  config.py  models.py  permissions.py  serializers.py  validation.py  views.py  visibilities.py
tests/: conftest.py  models.py  serializers.py  settings.py  test_permissions.py  test_validation.py  test_visibilities.py  urls.py  views.py
tests/migrations/: 0001_initial.py
