[metadata]
description-file = README.md
license_files =
    LICENSE.txt

[flake8]
ignore =
    # whitespace before ':'
    E203,
    # too many leading ### in a block comment
    E266,
    # line too long (managed by black)
    E501,
    # Line break occurred before a binary operator (this is not PEP8 compatible)
    W503,
    # do not enforce existence of docstrings
    D100,
    D101,
    D102,
    D103,
    D104,
    D105,
    D106,
    D107,
    # needed because of https://github.com/ambv/black/issues/144
    D202,
    # other string does contain unindexed parameters
    P103
max-line-length = 80
exclude = .tox
max-complexity = 10

[tool:isort]
known_first_party=dpv
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[tool:pytest]
addopts = --reuse-db --randomly-seed=1521188766 --randomly-dont-reorganize
DJANGO_SETTINGS_MODULE = tests.settings
filterwarnings =
    error::DeprecationWarning
    error::PendingDeprecationWarning
    ignore:django\.conf\.urls\.url\(\) is deprecated in favor of django\.urls\.re_path\(\):PendingDeprecationWarning


[coverage:run]
source=.

[coverage:report]
fail_under=100
exclude_lines =
    pragma: no cover
    pragma: todo cover
    def __str__
    def __unicode__
    def __repr__
omit=
    */migrations/*
    */apps.py
    manage.py
    setup.py
    .tox/*
show_missing = True
