[metadata]
description_file = README.md
license_files =
    LICENSE.txt

[tool:isort]
known_first_party=dpv
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[tool:pytest]
addopts = --reuse-db --randomly-seed=1521188766 --randomly-dont-reorganize
DJANGO_SETTINGS_MODULE = tests.settings
filterwarnings =
    error::DeprecationWarning
    error::PendingDeprecationWarning
    ignore:django\.conf\.urls\.url\(\) is deprecated in favor of django\.urls\.re_path\(\):PendingDeprecationWarning


[coverage:run]
source=.

[coverage:report]
fail_under=100
exclude_lines =
    pragma: no cover
    pragma: todo cover
    def __str__
    def __unicode__
    def __repr__
omit=
    */migrations/*
    */apps.py
    manage.py
    setup.py
    .tox/*
show_missing = True
